Revision history for {{$dist->name}}

{{$NEXT}}

0.100471  2010-02-16 13:30:57 America/New_York
          correct dist name (oops!  thanks for noticing, mst)

0.100470  2010-02-16 12:29:18 America/New_York
          first release